--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
 <body style="background-color:#8c03fc;">
  <div class="login">
-	<h1><i>Predict Flowers</i></h1>
+	<h1><i>Predict Flowers using machine learning models </i></h1>
 
    <br>
    <br>
