--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,16 @@
 <body style="background-color:#8c03fc;">
  <div class="login">
 	<h1><i>Predict Flowers using machine learning models </i></h1>
+	<!-- Main Input For Receiving Query to our ML -->
+    <form action="{{ url_for('predict')}}"method="post">
+    	<input type="text" name="sepal length (cm)" placeholder="sepal length" required="required" />
+        <input type="text" name="sepal width (cm)" placeholder="sepal width" required="required" />
+		<input type="text" name="petal length (cm)" placeholder="petal length" required="required" />
+        <input type="text" name="petal width (cm)" placeholder="petal width" required="required" />
+
+
+        <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
+    </form>
 
    <br>
    <br>
