--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
 <body style="background-color:#8c03fc;">
  <div class="login">
-	<h1><i>Predict Flowers using machine learning models </i></h1>
+	<h1><i>Predict Flowers using machine learning models and predict </i></h1>
 	<!-- Main Input For Receiving Query to our ML -->
     <form action="{{ url_for('predict')}}"method="post">
     	<input type="text" name="sepal length (cm)" placeholder="sepal length" required="required" />
